other-vpol/limit-configmap-for-sa/.chainsaw-test/chainsaw-step-02-apply-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: limit-cm-sa-namespace
