other-vpol/limit-configmap-for-sa/.chainsaw-test/chainsaw-step-02-apply-3.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: another-developer
  namespace: another-namespace
