other-vpol/limit-configmap-for-sa/.chainsaw-test/chainsaw-step-02-apply-4.yaml
apiVersion: v1
kind: Secret
metadata:
  annotations:
    kubernetes.io/service-account.name: another-developer
  name: another-secret
  namespace: another-namespace
type: kubernetes.io/service-account-token
