other-vpol/limit-configmap-for-sa/.chainsaw-test/chainsaw-step-02-apply-5.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: cm-manager
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  verbs:
  - get
  - create
  - update
