other-vpol/limit-configmap-for-sa/.chainsaw-test/chainsaw-step-02-apply-6.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: cm-manager:another-developer
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cm-manager
subjects:
- apiGroup: ""
  kind: ServiceAccount
  name: another-developer
  namespace: another-namespace
