other-vpol/limit-configmap-for-sa/.chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: limit-configmap-for-sa
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
    - message: Background scanning disabled; reporting permissions not required.
      reason: Succeeded
      status: "True"
    (conditions[?type == 'WebhookConfigured']):
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
